--- a/src/styles.css
+++ b/src/styles.css
@@ -64,6 +64,18 @@ body {
 }
 
 @media (max-width: 768px) {
+  #background-video {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+
   #joke {
     font-size: 16px;
   }
