--- a/src/styles.css
+++ b/src/styles.css
@@ -40,6 +40,8 @@ body {
 #joke {
   color: var(--color-one);
   font-size: 26px;
+  font-weight: 600;
+  line-height: 1.2;
   max-width: 50%;
   display: block;
   margin: 0 auto;
@@ -77,6 +79,6 @@ body {
   }
 
   #joke {
-    font-size: 16px;
+    font-size: 20px;
   }
 }
